# swagger.json
@@ -47,7 +47,7 @@
         "description": "Retorna o produto pelo id",
         "parameters": [
           {
-            "$ref": "#components/parameters/OpcionalToken"
+            "$ref": "#/components/parameters/OpcionalToken"
           },
           {
             "name": "id",
@@ -133,7 +133,7 @@
         "description": "Retorna os produtos de uma categoria específica",
         "parameters": [
           {
-            "$ref": "#components/parameters/OpcionalToken"
+            "$ref": "#/components/parameters/OpcionalToken"
           },
           {
             "name": "id",
@@ -182,7 +182,7 @@
         "description": "Retorna uma array de produtos que contêm parte do nome",
         "parameters": [
           {
-            "$ref": "#components/parameters/OpcionalToken"
+            "$ref": "#/components/parameters/OpcionalToken"
           },
           {
             "name": "name",
@@ -383,7 +383,7 @@
         "description": "Desloga o usuário",
         "parameters": [
           {
-            "$ref": "#components/parameters/AuthToken"
+            "$ref": "#/components/parameters/AuthToken"
           }
         ],
         "responses": {
@@ -426,7 +426,7 @@
         "description": "Checar token do usuário",
         "parameters": [
           {
-            "$ref": "#components/parameters/AuthToken"
+            "$ref": "#/components/parameters/AuthToken"
           }
         ],
         "responses": {
@@ -468,7 +468,7 @@
         "description": "Adiciona ou remove um produto da lista de desejos do usuário.",
         "parameters": [
           {
-            "$ref": "#components/parameters/AuthToken"
+            "$ref": "#/components/parameters/AuthToken"
           },
           {
             "name": "product_id",
@@ -481,16 +481,6 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Produto favoritado com sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          },
           "200": {
             "description": "Produto desfavoritado com sucesso",
             "content": {
@@ -501,22 +491,30 @@
               }
             }
           },
+          "201": {
+            "description": "Produto favoritado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
           "401": {
-            "description": "Usuário não autenticado.",
-            "content": {}
+            "$ref": "#/components/responses/UserNotAuthenticated"
           },
           "404": {
             "description": "Produto favoritado não encontrado.",
             "content": {}
           },
           "500": {
-            "description": "Erro no serviço",
-            "content": {}
+            "$ref": "#/components/responses/UserNotAuthenticated"
           }
         }
       }
     },
-    "/favorites/user": {
+    "/favorites/user/": {
       "get": {
         "tags": [
           "Favoritos"
@@ -525,13 +523,13 @@
         "description": "Retorna uma array com os produtos favoritados pelo usuário autenticado.",
         "parameters": [
           {
-            "$ref": "#components/parameters/AuthToken"
+            "$ref": "#/components/parameters/AuthToken"
           },
           {
-            "$ref": "#components/parameters/Pagination"
+            "$ref": "#/components/parameters/Pagination"
           },
           {
-            "$ref": "#components/parameters/ReturnLimit"
+            "$ref": "#/components/parameters/ReturnLimit"
           }
         ],
         "responses": {
@@ -539,8 +537,7 @@
             "$ref": "#/components/responses/ProductsWithPagination"
           },
           "401": {
-            "description": "Usuário não autenticado.",
-            "content": {}
+            "$ref": "#/components/responses/UserNotAuthenticated"
           },
           "404": {
             "description": "Produto favoritado não encontrado.",
@@ -553,7 +550,7 @@
         }
       }
     },
-    "/addresses": {
+    "/addresses/": {
       "post": {
         "tags": [
           "Endereços"
@@ -562,7 +559,7 @@
         "description": "Cadastra um novo endereço",
         "parameters": [
           {
-            "$ref": "#components/parameters/AuthToken"
+            "$ref": "#/components/parameters/AuthToken"
           }
         ],
         "requestBody": {
@@ -591,9 +588,9 @@
                   }
                 },
                 "required": [
-                  "name", 
+                  "name",
                   "cpf",
-                  "cep", 
+                  "cep",
                   "number",
                   "complement"
                 ]
@@ -607,7 +604,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Endereço"
+                  "$ref": "#/components/schemas/Endereco"
                 }
               }
             }
@@ -619,6 +616,9 @@
           "401": {
             "description": "Usuário não autenticado.",
             "content": {}
+          },
+          "500": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
           }
         }
       },
@@ -629,7 +629,9 @@
         "description": "Retorna todos os endereços de um usuário.",
         "summary": "Retorna todos os endereços de um usuário.",
         "parameters": [
-          { "$ref": "#/components/parameters/AuthToken" }
+          {
+            "$ref": "#/components/parameters/AuthToken"
+          }
         ],
         "responses": {
           "200": {
@@ -639,11 +641,17 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Endereço"
+                    "$ref": "#/components/schemas/Endereco"
                   }
                 }
               }
             }
+          },
+          "401": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
           }
         }
       }
@@ -657,7 +665,16 @@
         "description": "Atualizar informações do cadastro.",
         "parameters": [
           {
-            "$ref": "#components/parameters/AuthToken"
+            "$ref": "#/components/parameters/AuthToken"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "Id do endereço que deseja atualizar."
           }
         ],
         "requestBody": {
@@ -686,9 +703,9 @@
                   }
                 },
                 "required": [
-                  "name", 
+                  "name",
                   "cpf",
-                  "cep", 
+                  "cep",
                   "number",
                   "complement"
                 ]
@@ -702,7 +719,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Endereço"
+                  "$ref": "#/components/schemas/Endereco"
                 }
               }
             }
@@ -714,6 +731,9 @@
           "401": {
             "description": "Usuário não autenticado.",
             "content": {}
+          },
+          "500": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
           }
         }
       },
@@ -724,7 +744,18 @@
         "description": "Retorna todos os endereços de um usuário.",
         "summary": "Retorna todos os endereços de um usuário.",
         "parameters": [
-          { "$ref": "#/components/parameters/AuthToken" }
+          {
+            "$ref": "#/components/parameters/AuthToken"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "Id do endereço que deseja deletar."
+          }
         ],
         "responses": {
           "200": {
@@ -734,11 +765,205 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Endereço"
+                    "$ref": "#/components/schemas/Endereco"
                   }
                 }
               }
             }
+          },
+          "401": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
+          },
+          "500": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
+          }
+        }
+      }
+    },
+    "/cards/": {
+      "get": {
+        "tags": [
+          "Cartões"
+        ],
+        "description": "Retorna todos os cartões de um usuário.",
+        "summary": "Retorna todos os cartões de um usuário.",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/AuthToken"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Cartões encontrados",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Cartao"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Cartões"
+        ],
+        "description": "Registra um novo cartões na conta do usuário logado.",
+        "summary": "Registra um novo cartões na conta do usuário logado.",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/AuthToken"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "integer"
+                  },
+                  "owner_name": {
+                    "type": "string"
+                  },
+                  "surname": {
+                    "type": "string"
+                  },
+                  "numbers": {
+                    "type": "string"
+                  },
+                  "due_date": {
+                    "type": "string"
+                  },
+                  "type_id": {
+                    "type": "integer"
+                  },
+                  "user_id": {
+                    "type": "integer"
+                  }
+                },
+                "required": [
+                  "owner_name",
+                  "surname",
+                  "numbers",
+                  "due_date",
+                  "type_id",
+                  "user_id"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Cartão registrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Cartao"
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/cards/{id}": {
+      "get": {
+        "tags": [
+          "Cartões"
+        ],
+        "description": "Retorna todos os cartões de um usuário.",
+        "summary": "Retorna todos os cartões de um usuário.",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/AuthToken"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "ID do cartão que deseja consultar."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Cartão encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Cartao"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Cartões"
+        ],
+        "description": "Registra um novo cartões na conta do usuário logado.",
+        "summary": "Registra um novo cartões na conta do usuário logado.",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/AuthToken"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "ID do cartão que deseja deletar."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Cartão deletado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Cartao"
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/UserNotAuthenticated"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
           }
         }
       }
@@ -775,10 +1000,30 @@
             }
           }
         }
+      },
+      "ServerError": {
+        "description": "Algo de errado no servidor",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      },
+      "UserNotAuthenticated": {
+        "description": "Usuário não autenticado.",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
       }
     },
     "schemas": {
-      "Endereço": {
+      "Endereco": {
         "type": "object",
         "properties": {
           "id": {
@@ -873,6 +1118,12 @@
           },
           "Category": {
             "$ref": "#/components/schemas/Categoria"
+          },
+          "Favorites": {
+            "$ref": "#/components/schemas/Favorito"
+          },
+          "Carts": {
+            "$ref": "#/components/schemas/Carrinho"
           }
         }
       },
@@ -890,6 +1141,46 @@
           },
           "Product": {
             "$ref": "#/components/schemas/Produto"
+          }
+        }
+      },
+      "Carrinho": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "user_id": {
+            "type": "integer"
+          },
+          "product_id": {
+            "type": "integer"
+          }
+        }
+      },
+      "Cartao": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "owner_name": {
+            "type": "string"
+          },
+          "surname": {
+            "type": "string"
+          },
+          "numbers": {
+            "type": "string"
+          },
+          "due_date": {
+            "type": "string"
+          },
+          "type_id": {
+            "type": "integer"
+          },
+          "user_id": {
+            "type": "integer"
           }
         }
       }
